@@ -1,5 +1,5 @@
 <% %>
-<tr><td colspan=7>
+<tr><td colspan=6>
 	<% if ( typeof message != 'undefined') { %>
 		<%= message %>
 	<% } %>
