@@ -6,7 +6,7 @@
 			<th>Scanner</th>
 			<th>Parameters</th>
 			<th>Hosts</th>
-			<th># Findings</th>
+			<!-- <th># Findings</th> -->
 			<th>Last scan</th>
 			<th>Action</th>
 		</tr>
