@@ -3,7 +3,7 @@
 <td><%= scanner[0] %></td>
 <td><%= parameters %></td>
 <td><%= targets %></td>
-<td><%= findCount %></td>
+<!-- <td><%= findCount %></td> -->
 <td>
 	<% if(lastScan == null ) { %>
 		&nbsp;
