@@ -4,7 +4,7 @@
 		<tr>
 			<th>Name</td>
 			<th># of scans</td>
-			<th># of findings</td>
+			<!-- <th># of findings</td> -->
 			<th>Last scan</td>
 			<th>Action</td>
 		</tr>
