@@ -1,7 +1,7 @@
 <% %>
 <td><%= name %></td>
 <td><%= scanCount %></td>
-<td><%= findCount %></td>
+<!-- <td><%= findCount %></td> -->
 <td><%= lastScan %></td>
 <td>
   <a href='javascript://' class='edit'>Edit</a>
