@@ -17,8 +17,9 @@ FIxed major performance issues
 
 Bigs fixed (tickets closed):
 ----------------------------
-83 - convert_v2_v2 does not work with default install directory from RPM
-   (/var/lib/seccubus)
+83 - convert_v2_v2 does not work with default install directory from RPM (/var/lib/seccubus)
+84 - getWorkspaces slow with large database
+85 - getScans slow with large databases
 86 - getFindings slow with workspaces with lots of findings
 
 14-3-2012 - 2.0.beta3 (a.k.a. the Blackhat edition)
